--- a/Rotating Navigation/style.css
+++ b/Rotating Navigation/style.css
@@ -88,17 +88,19 @@ nav ul {
 }
 
 nav ul li {
+    display: block;
     text-transform: uppercase;
     color: white;
     margin: 40px 0;
     transform: translateX(-100%);
     transition: transform 0.4s ease-in;
+    display: block;
 }
 
 nav ul li i {
     font-size: 20px;
     margin-right: 10px;
-    transform: translateX(-150%);
+    transform: translateX(-100%);
 }
 
 nav ul li + li {
