--- a/Blurry Loading/style.css
+++ b/Blurry Loading/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 * {
     box-sizing: border-box;
@@ -6,12 +6,27 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow: hidden;
     margin: 0;
+}
+
+.bg {
+    background: url('https://cdn.pixabay.com/photo/2017/08/06/22/01/books-2596809_1280.jpg') no-repeat center center/cover;
+    position: absolute;
+    top: -16px;
+    left: -16px;
+    width: calc(100vw + 40px);
+    height: calc(100vh + 40px);
+    z-index: -1;
+    filter: blur(0px);
+}
+
+.loading-text {
+    font-size: 50px;
+    color: white;
 }
