--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
 
+
+:root {
+    --left-bg-color: rgba(13, 17, 129, 0.7);
+    --right-bg-color: rgba(139, 18, 195, 0.7);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -7,11 +13,51 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     overflow: hidden;
     margin: 0;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: darkgray;
+}
+
+.split {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.split.left {
+    left: 0;
+    background: url('https://cdn.wallpapersafari.com/75/49/blvcFf.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.split.left:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--left-bg-color);
+}
+
+.split.right {
+    right: 0;
+    background: url('https://www.allkeyshop.com/blog/wp-content/uploads/steam-deck-4.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.split.right:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--right-bg-color);
 }
