--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -6,6 +6,8 @@
     --right-bg-color: rgba(139, 18, 195, 0.7);
     --left-btn-hover-color: rgba(13, 17, 129, 1);
     --right-btn-hover-color: rgba(139, 18, 195, 1);
+    --hover-width: 75%;
+    --other-width: 25%;
 }
 
 * {
@@ -102,4 +104,36 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--right-bg-color);
+}
+
+.split.right, .split.left, .split.right::before, split.left::before {
+    transition: width 0.65s;
+}
+
+.hover-left .left {
+    width: var(--hover-width)
+}
+
+.hover-left .right {
+    width: var(--other-width)
+}
+
+.hover-right .left {
+    width: var(--other-width)
+}
+
+.hover-right .right {
+    width: var(--hover-width)
+}
+
+@media(max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+        top:30%
+    }
+
+    .btn {
+        padding: 1.2rem;
+        width: 12rem;
+    }
 }
